RESOLVED FIXED168643
AudioTrackPrivateMediaStreamCocoa should not exclusively lock its read and write threads.
https://bugs.webkit.org/show_bug.cgi?id=168643
Summary AudioTrackPrivateMediaStreamCocoa should not exclusively lock its read and wr...
Jer Noble
Reported 2017-02-21 00:06:41 PST
AudioTrackPrivateMediaStreamCocoa should not exclusively lock its read and write threads.
Attachments
Patch (5.19 KB, patch)
2017-02-21 00:09 PST, Jer Noble
no flags
Patch (5.17 KB, patch)
2017-02-21 10:14 PST, Jer Noble
no flags
Patch for landing (5.89 KB, patch)
2017-02-21 14:44 PST, Jer Noble
no flags
Patch (14.45 KB, patch)
2017-02-22 11:07 PST, Jer Noble
eric.carlson: review+
Patch for landing (14.45 KB, patch)
2017-02-22 11:16 PST, Jer Noble
no flags
Jer Noble
Comment 1 2017-02-21 00:09:37 PST
Jer Noble
Comment 2 2017-02-21 10:14:24 PST
Eric Carlson
Comment 3 2017-02-21 11:34:23 PST
Comment on attachment 302279 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=302279&action=review > Source/WebCore/platform/mediastream/mac/AudioTrackPrivateMediaStreamCocoa.cpp:222 > Ref<AudioTrackPrivateMediaStreamCocoa> protectedThis { *this }; Nit: it would be nice to have a comment here or in the destructor explaining this retain prevents the obvious problems.
Jer Noble
Comment 4 2017-02-21 14:44:18 PST
Created attachment 302310 [details] Patch for landing
Jer Noble
Comment 5 2017-02-22 11:07:23 PST
Eric Carlson
Comment 6 2017-02-22 11:13:54 PST
Comment on attachment 302418 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=302418&action=review > Source/WebCore/ChangeLog:14 > + The one piece thich locks previously protected against unsafe access was during creation of Nit: "thich locks" -> "which was" ?
Jer Noble
Comment 7 2017-02-22 11:16:33 PST
Created attachment 302419 [details] Patch for landing
Jer Noble
Comment 8 2017-02-27 09:02:04 PST
Note You need to log in before you can comment on or make changes to this bug.