Source/WebCore/platform/mediastream/mac/AudioTrackPrivateMediaStreamCocoa.h
@@ -30,7 +30,6 @@
 #include "AudioTrackPrivateMediaStream.h"
 #include <AudioToolbox/AudioToolbox.h>
 #include <CoreAudio/CoreAudioTypes.h>
-#include <wtf/Lock.h>
 
 namespace WebCore {
 
@@ -67,7 +66,7 @@ private:
     static OSStatus inputProc(void*, AudioUnitRenderActionFlags*, const AudioTimeStamp*, UInt32 inBusNumber, UInt32 numberOfFrames, AudioBufferList*);
     OSStatus render(UInt32 sampleCount, AudioBufferList&, UInt32 inBusNumber, const AudioTimeStamp&, AudioUnitRenderActionFlags&);
 
-    OSStatus setupAudioUnit();
+    AudioComponentInstance createAudioUnit(const CAAudioStreamDescription& inputDescription, CAAudioStreamDescription& outputDescription);
     void cleanup();
     void zeroBufferList(AudioBufferList&, size_t);
     void playInternal();
@@ -78,7 +77,6 @@ private:
 
     RefPtr<AudioSampleDataSource> m_dataSource;
 
-    Lock m_internalStateLock;
     float m_volume { 1 };
     bool m_isPlaying { false };
     bool m_autoPlay { false };
